# fifpy

./: .gitignore  2Dfftconvolution_test.py  FIF_main.py  FIF_v2_13.py  FIFpy.py  IF_aux.py  IF_parallel.f90  IF_v8_3E.py  IF_v8_3e.py  IFpy.py  MIF.py  MIF3D.py  MIF_v3.py  MIF_v3e.py  MIFpy.py  MvFIFpy.py  MvIF.py  MvIFpy.py  README.md  __init__.py  arrays.py  fif_tools.py  pyproject.toml  readme.txt  requirements.txt  test_IF.py  test_MvIF.py  test_convolve_IF.py  test_lowpass_IF.py  time.py
.github/workflows/: publish.yml
fifpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
github/: publish_yml
src/fifpy/: .IF_aux.py.swp  FIFpy.py  IF_aux.py  IFpy.py  MIF3D.py  MIFpy.py  MvFIFpy.py  MvIFpy.py  __init__.py  arrays.py  attrdict.py
staged-recipes/recipes/iterativefiltering/: meta.yaml
testing/: FIF_main.py  test_IFclass.py  test_MIF.py
testing/garbage/: MIF.py  MIF_v3.py
tests/: ex_mvfif_cicone.py  mvfif_test_cicone.py  test_fif.py
