# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "fifpy"
version = "1.0.2b"
description = "Python Package for Iterative Filtering decomposition methods"
readme = "README.md"
requires-python = "<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Emanuele Papini", email = "emanuele.papini@inaf.it" }]
maintainers = [{ name = "Emanuele Papini", email = "emanuele.papini@inaf.it" }]
classifiers = [
    "Development Status :: 5 - Production/Stable" ,
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = ["data analysis", "time series", "adaptive decomposition"]
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "attrdict",
    "matplotlib" , "scikit-learn"]

[project.urls]
Homepage = "https://github.com/EmanuelePapini/fifpy"
