# pyproject_pip.toml

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"
#
#[tool.hatch.build.targets.sdist]
#only-include = ["src/fifpy/*"]
#
#[tool.hatch.build.targets.wheel]
#sources = ["src"]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "fifpy"
version = "0.1.6"
description = "Python Package for Iterative Filtering decomposition methods"
readme = "README.md"
requires-python = "<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Emanuele Papini", email = "emanuele.papini@inaf.it" }]
maintainers = [{ name = "Emanuele Papini", email = "emanuele.papini@inaf.it" }]
classifiers = [
    "Development Status :: 5 - Production/Stable" ,
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
]
keywords = ["data analysis", "time series", "adaptive decomposition"]
dependencies = [
    "numba",
    "attrdict",
    "matplotlib" ,
    "numpy",
    "scipy",
    "scikit-learn"]
#dependencies = [
#    "numba==0.55.1",
#    "attrdict",
#    "matplotlib==3.5.2" ,
#    "numpy==1.21.6",
#    "scipy==1.7.3",
#    "scikit-learn==1.1.1"]

[project.urls]
Homepage = "https://github.com/EmanuelePapini/fifpy"
